tests/e2e/negative/n0012_wrong_member_access.cryo
// @test: wrong_member_access
// @expect: compile_fail
// @mode: raw
// @description: Accessing non-existent struct field should fail
// @tags: structs, member_access, errors

namespace NegWrongMember;

type struct Point {
    x: int;
    y: int;

    static new(a: int, b: int) -> Point {
        return Point { x: a, y: b };
    }
}

function main() -> int {
    const p: Point = Point::new(1, 2);
    const z: int = p.z;
    return 0;
}
